--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         height="48"
       />
       <div>
-        <h1>GitHub Actions — Simple Demo</h1>
+        <h1>{{DEMO_TITLE}}</h1>
         <div style="color: #666">
           A tiny static HTML page + an example workflow to show how Actions runs
           on push.
