--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1>GitHub Actions — Simple Demo</h1>
         <div style="color: #666">
           A tiny static HTML page + an example workflow to show how Actions runs
-          on push.
+          on push..
         </div>
       </div>
     </header>
